--- a/heart_disease_analysis.ipynb
+++ b/heart_disease_analysis.ipynb
@@ -502,98 +502,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
-       " 22    42    1   0       140   226    0        1      178      0      0.0   \n",
-       " 9     57    1   2       150   168    0        1      174      0      1.6   \n",
-       " 255   45    1   0       142   309    0        0      147      1      0.0   \n",
-       " 123   54    0   2       108   267    0        0      167      0      0.0   \n",
-       " 140   51    0   2       120   295    0        0      157      0      0.6   \n",
-       " ..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
-       " 21    44    1   2       130   233    0        1      179      1      0.4   \n",
-       " 235   51    1   0       140   299    0        1      173      1      1.6   \n",
-       " 192   54    1   0       120   188    0        1      113      0      1.4   \n",
-       " 277   57    1   1       124   261    0        1      141      0      0.3   \n",
-       " 65    35    0   0       138   183    0        1      182      0      1.4   \n",
-       " \n",
-       "      slope  ca  thal  \n",
-       " 22       2   0     2  \n",
-       " 9        2   0     2  \n",
-       " 255      1   3     3  \n",
-       " 123      2   0     2  \n",
-       " 140      2   0     2  \n",
-       " ..     ...  ..   ...  \n",
-       " 21       2   0     2  \n",
-       " 235      2   0     3  \n",
-       " 192      1   1     3  \n",
-       " 277      2   0     3  \n",
-       " 65       2   0     2  \n",
-       " \n",
-       " [242 rows x 13 columns],      target\n",
-       " 22        1\n",
-       " 9         1\n",
-       " 255       0\n",
-       " 123       1\n",
-       " 140       1\n",
-       " ..      ...\n",
-       " 21        1\n",
-       " 235       0\n",
-       " 192       0\n",
-       " 277       0\n",
-       " 65        1\n",
-       " \n",
-       " [242 rows x 1 columns],      age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
-       " 28    65    0   2       140   417    1        0      157      0      0.8   \n",
-       " 222   65    1   3       138   282    1        0      174      0      1.4   \n",
-       " 177   64    1   2       140   335    0        1      158      0      0.0   \n",
-       " 216   62    0   2       130   263    0        1       97      0      1.2   \n",
-       " 113   43    1   0       110   211    0        1      161      0      0.0   \n",
-       " ..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
-       " 42    45    1   0       104   208    0        0      148      1      3.0   \n",
-       " 264   54    1   0       110   206    0        0      108      1      0.0   \n",
-       " 271   61    1   3       134   234    0        1      145      0      2.6   \n",
-       " 150   66    1   0       160   228    0        0      138      0      2.3   \n",
-       " 165   67    1   0       160   286    0        0      108      1      1.5   \n",
-       " \n",
-       "      slope  ca  thal  \n",
-       " 28       2   1     2  \n",
-       " 222      1   1     2  \n",
-       " 177      2   0     2  \n",
-       " 216      1   1     3  \n",
-       " 113      2   0     3  \n",
-       " ..     ...  ..   ...  \n",
-       " 42       1   0     2  \n",
-       " 264      1   1     2  \n",
-       " 271      1   2     2  \n",
-       " 150      2   0     1  \n",
-       " 165      1   3     2  \n",
-       " \n",
-       " [61 rows x 13 columns],      target\n",
-       " 28        1\n",
-       " 222       0\n",
-       " 177       0\n",
-       " 216       0\n",
-       " 113       1\n",
-       " ..      ...\n",
-       " 42        1\n",
-       " 264       0\n",
-       " 271       0\n",
-       " 150       1\n",
-       " 165       0\n",
-       " \n",
-       " [61 rows x 1 columns])"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def data_split(x, y, frac):\n",
     "    idx = np.random.permutation(x.index)\n",
@@ -607,7 +518,7 @@
     "   \n",
     "    return train_x, train_y, test_x, test_y\n",
     "\n",
-    "data_split(x, y, 0.8)    "
+    "train_x, train_y, test_x, test_y = data_split(x, y, 0.8)    "
    ]
   },
   {
@@ -617,6 +528,7 @@
    "outputs": [],
    "source": [
     "def accuracy(y, y_pred):\n",
+    "    \n",
     "    return "
    ]
   },
@@ -627,18 +539,25 @@
    "outputs": [],
    "source": [
     "def confusion_matrix(y, y_pred):\n",
-    "    return"
+    "    tp = \n",
+    "    \n",
+    "    return tp, fp, tn, fn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "def classification_report(y, y_pred):\n",
-    "    return\n",
-    "    "
+    "    tp, fp, tn, fn = confusion_matrix(y, y_pred)\n",
+    "    accuracy = (tp + tn) / (tp + tn + fp + fn)\n",
+    "    recall = tp / (tp + fn)\n",
+    "    precision = tp / (tp + fp)\n",
+    "    specificity = tn / (tn + fp)\n",
+    "    f1_score = 2 * recall * precision / (recall + precision)\n",
+    "    return accuracy, recall, precision, specificity, f1_score  "
    ]
   },
   {
@@ -659,6 +578,28 @@
    "source": [
     "def t_test(y1, y2):\n",
     "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class KNN:\n",
+    "  def __init__(self, k):\n",
+    "    self.k = k\n",
+    "    \n",
+    "  def predict(self, x):\n",
+    "    return self\n",
+    "    \n",
+    "  def fit(self, x, y):\n",
+    "    \n",
+    "    return\n",
+    "    \n",
+    "\n",
+    "k1 = KNN(3)\n",
+    "k1.fit(train_x, train_y)"
    ]
   }
  ],
