--- a/heart_disease_analysis.ipynb
+++ b/heart_disease_analysis.ipynb
@@ -523,25 +523,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def accuracy(y, y_pred):\n",
-    "    \n",
-    "    return "
+    "    diff = (y == y_pred).to_numpy()\n",
+    "    return np.count_nonzero(diff) / len(y)\n",
+    "\n",
+    "accuracy(test_y, test_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(35, 0, 26, 0)"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def confusion_matrix(y, y_pred):\n",
-    "    tp = \n",
-    "    \n",
-    "    return tp, fp, tn, fn"
+    "    tp = np.count_nonzero((y_pred == True) & (y == True).to_numpy())\n",
+    "    fp = np.count_nonzero((y_pred == True) & (y == False).to_numpy())\n",
+    "    tn = np.count_nonzero((y_pred == False) & (y == False).to_numpy())\n",
+    "    fn = np.count_nonzero((y_pred == False) & (y == True).to_numpy()) \n",
+    "    return tp, fp, tn, fn\n",
+    "\n",
+    "confusion_matrix(test_y, test_y)"
    ]
   },
   {
@@ -576,8 +604,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def t_test(y1, y2):\n",
-    "    return"
+    "def t_test(y1, y2, threshold):\n",
+    "    \n",
+    "    return\n",
+    "\n"
    ]
   },
   {
@@ -600,6 +630,27 @@
     "\n",
     "k1 = KNN(3)\n",
     "k1.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DecisionTree:\n",
+    "  def __init__(self, max_depth, threshold):\n",
+    "    self.max_depth = max_depth\n",
+    "    self.threshold = threshold\n",
+    "    \n",
+    "  def predict(self, x):\n",
+    "    \n",
+    "    return self\n",
+    "    \n",
+    "  def fit(self, x, y):\n",
+    "    \n",
+    "    return\n",
+    "\n"
    ]
   }
  ],
