Knn distance and neighbors function

--- a/heart_disease_analysis.ipynb
+++ b/heart_disease_analysis.ipynb
@@ -660,24 +660,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 189,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age          57.0\n",
+      "sex           0.0\n",
+      "cp            0.0\n",
+      "trestbps    120.0\n",
+      "chol        354.0\n",
+      "fbs           0.0\n",
+      "restecg       1.0\n",
+      "thalach     163.0\n",
+      "exang         1.0\n",
+      "oldpeak       0.6\n",
+      "slope         2.0\n",
+      "ca            0.0\n",
+      "thal          2.0\n",
+      "Name: 4, dtype: float64\n",
+      "1.812791438058438\n",
+      "[1.54480737 1.30644736 0.62429362 1.1421124  0.83750664 1.73826581\n",
+      " 0.81568517 0.89673156 1.991867   1.72571855 2.0010965  1.21675715\n",
+      " 1.75593107 2.07317395 1.69908182 1.70862701 1.61890312 1.21859409\n",
+      " 2.28141763 2.09424619 1.65610258 1.85150319 1.58957231 1.7492882\n",
+      " 1.49477774 1.22350534 1.80818051 2.14025288 1.7015198  1.14457237\n",
+      " 2.05589106 1.13090713 1.85834445 1.82154138 1.56615125 1.68074502\n",
+      " 1.19680464 1.29261217 1.97582624 0.76985267 1.37675757 0.92354216\n",
+      " 1.55913882 1.21618099 2.01868103 1.80366197 1.41264706 1.20522623\n",
+      " 1.38673604 1.21857315 1.22409955 0.59978742 1.74939473 1.2026396\n",
+      " 1.76285283 2.17617846 1.02959103 1.22542685 1.78098776 1.22048111\n",
+      " 1.69615306 1.22946317 0.84764225 1.69326638 1.49377175 1.43502337\n",
+      " 1.78474807 1.55850437 2.13826756 1.43542173 1.43854272 1.58089787\n",
+      " 1.44692962 1.86472952 1.78536469 1.26841589 1.72759521 2.00197127\n",
+      " 1.50000595 1.45308865 0.88296333 1.74587019 1.8759392  1.31242434\n",
+      " 2.26378202 2.00214194 1.72963076 2.10480541 1.89925693 1.9991308\n",
+      " 1.68026883 1.45362027 1.90589675 1.15547774 2.01000585 2.41637987\n",
+      " 1.60839622 1.00891856 2.06166685 1.42653295 1.48502006 1.71144605\n",
+      " 1.58594708 1.39158515 1.1685844  1.58078666 1.88312239 1.40522327\n",
+      " 1.34615546 1.14392942 1.48127368 1.68428007 1.2585731  1.46404899\n",
+      " 1.71401934 1.33610643 1.97042473 1.45872526 1.14828387 1.61748545\n",
+      " 0.99786074 1.24547862 1.85684127 1.20780926 1.67120575 1.94772073\n",
+      " 1.60787989 2.06005965 2.39724247 1.70445486 1.96188521 0.74003691\n",
+      " 1.14249955 1.81773048 2.16607781 2.4493386  0.97178366 1.2428816\n",
+      " 1.85280502 2.00929646 1.84240839 1.57178523 1.6694469  1.19492777\n",
+      " 1.30169558 1.10145045 2.21349059 2.02092636 2.06515644 1.89333433\n",
+      " 1.54590447 1.92476348 1.64874166 1.51922789 1.77696196 1.45790824\n",
+      " 1.746724   1.75051359 1.74190581 2.02800691 1.26328954 1.99433224\n",
+      " 2.15150125 1.66536745 1.25924011 1.34598571 1.72037973 1.0966547\n",
+      " 1.31432975 1.58418502 1.53093206 1.14421931 1.91360007 1.62137786\n",
+      " 1.70211985 2.3953418  1.31326276 1.69920385 1.84702957 2.10074729\n",
+      " 1.7044911  0.63553274 1.29733163 1.96289637 2.18291802 2.05328138\n",
+      " 2.09099373 1.97367553 0.65994098 1.32735503 1.22414335 1.72138437\n",
+      " 1.64716777 1.68158493 1.74249217 1.30902336 1.67126824 1.46545908\n",
+      " 1.27396048 2.140168   1.63377952 0.83962088 1.66377891 1.55246129\n",
+      " 1.80270978 0.93901623 2.09193062 1.19686018 1.87553703 1.26616568\n",
+      " 1.68914324 0.64509227 1.26611166 1.91983693 1.83293498 1.45363163\n",
+      " 1.22031412 1.95967445 1.20806944 0.60761075 1.84936183 1.16787316\n",
+      " 1.30277668 1.56270868 1.98178397 1.95239998 1.02054023 1.69569798\n",
+      " 1.84695286 0.82222427 1.55184949 2.04804851 1.47539724 2.23389158\n",
+      " 1.73004207 1.4807656  1.51829317 1.171953   2.3523394  2.33928969\n",
+      " 1.94701027 1.96204257]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class KNN:\n",
     "  def __init__(self, k):\n",
     "    self.k = k\n",
     "    \n",
-    "  def predict(self, x):\n",
-    "    return self\n",
-    "    \n",
+    "  def predict(self, test_x):\n",
+    "    test_x = self.scale_features(test_x)\n",
+    "    y_neighbors = self.find_neighbors(self.x, self.y, test_x.iloc[1])\n",
+    "    test_x = np.argsort()[-3:][::-1]\n",
+    "    return 0\n",
+    "\n",
+    "  def euclidean_distance(self, v1, v2):\n",
+    "    dif = v1 - v2\n",
+    "    return np.sqrt(np.sum(dif ** 2))\n",
+    "\n",
+    "  def scale_features(self, x):\n",
+    "    return (x - x.min()) / (x.max() - x.min())\n",
+    "\n",
+    "  def find_neighbors(self, x, y, test_row):\n",
+    "    dist = np.zeros(len(x))\n",
+    "    for i in range(0, len(x)):\n",
+    "        dist[i] = self.euclidean_distance(x.iloc[i], test_row)\n",
+    "    print(dist)    \n",
+    "    return    \n",
+    "\n",
     "  def fit(self, x, y):\n",
+    "    self.x = self.scale_features(x)\n",
+    "    self.y = y\n",
     "    \n",
-    "    return\n",
-    "    \n",
+    "    print(x.iloc[1])\n",
+    "    scaled = self.scale_features(x)\n",
+    "    print(self.euclidean_distance(scaled.iloc[0], scaled.iloc[1]))\n",
+    "    return 0\n",
     "\n",
     "k1 = KNN(3)\n",
-    "k1.fit(train_x, train_y)"
+    "k1.fit(train_x, train_y)\n",
+    "k1.predict(test_x)"
    ]
   },
   {
