--- a/heart_disease_analysis.ipynb
+++ b/heart_disease_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "4   0     2  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "4       1"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,14 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -291,82 +284,82 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>41</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>130</td>\n",
-       "      <td>204</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>172</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>2</td>\n",
+       "      <th>115</th>\n",
+       "      <td>37</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>41</td>\n",
+       "      <td>120</td>\n",
+       "      <td>215</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>105</td>\n",
-       "      <td>198</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>168</td>\n",
+       "      <td>170</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>295</th>\n",
-       "      <td>63</td>\n",
-       "      <td>1</td>\n",
+       "      <th>6</th>\n",
+       "      <td>56</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>140</td>\n",
-       "      <td>187</td>\n",
+       "      <td>294</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>144</td>\n",
+       "      <td>153</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.3</td>\n",
        "      <td>1</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>46</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101</td>\n",
+       "      <td>197</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>156</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>44</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>118</td>\n",
-       "      <td>242</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>149</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>1</td>\n",
+       "      <th>52</th>\n",
+       "      <td>62</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>130</td>\n",
+       "      <td>231</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>146</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>162</th>\n",
-       "      <td>41</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>120</td>\n",
-       "      <td>157</td>\n",
+       "      <th>94</th>\n",
+       "      <td>45</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>182</td>\n",
+       "      <td>112</td>\n",
+       "      <td>160</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>138</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -376,21 +369,21 @@
       ],
       "text/plain": [
        "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
-       "2     41    0   1       130   204    0        0      172      0      1.4   \n",
-       "30    41    0   1       105   198    0        1      168      0      0.0   \n",
-       "295   63    1   0       140   187    0        0      144      1      4.0   \n",
-       "146   44    0   2       118   242    0        1      149      0      0.3   \n",
-       "162   41    1   1       120   157    0        1      182      0      0.0   \n",
+       "115   37    0   2       120   215    0        1      170      0      0.0   \n",
+       "6     56    0   1       140   294    0        0      153      0      1.3   \n",
+       "87    46    1   1       101   197    1        1      156      0      0.0   \n",
+       "52    62    1   2       130   231    0        1      146      0      1.8   \n",
+       "94    45    0   1       112   160    0        1      138      0      0.0   \n",
        "\n",
        "     slope  ca  thal  \n",
-       "2        2   0     2  \n",
-       "30       2   1     2  \n",
-       "295      2   2     3  \n",
-       "146      1   1     2  \n",
-       "162      2   0     2  "
+       "115      2   0     2  \n",
+       "6        1   0     2  \n",
+       "87       2   0     3  \n",
+       "52       1   3     3  \n",
+       "94       1   0     2  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -437,23 +430,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>115</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
+       "      <th>6</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>295</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146</th>\n",
+       "      <th>87</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>162</th>\n",
+       "      <th>52</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -462,14 +455,14 @@
       ],
       "text/plain": [
        "     target\n",
-       "2         1\n",
-       "30        1\n",
-       "295       0\n",
-       "146       1\n",
-       "162       1"
+       "115       1\n",
+       "6         1\n",
+       "87        1\n",
+       "52        1\n",
+       "94        1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,29 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True, False,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_set = people_copy.sample(frac=0.75, random_state=0)\n",
-    "test_set = people_copy.drop(train_set.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +503,7 @@
        "1.0"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,16 +518,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(35, 0, 26, 0)"
+       "(36, 0, 25, 0)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -627,15 +598,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "target    0.57377\n",
-      "dtype: float64 target    0.494528\n",
+      "target    0.590164\n",
+      "dtype: float64 target    0.491803\n",
       "dtype: float64 target    0.0\n",
       "dtype: float64\n"
      ]
@@ -652,7 +623,7 @@
     "    # compute p_value and reject or accept null hypotesis\n",
     "    # https://machinelearningmastery.com/how-to-code-the-students-t-test-from-scratch-in-python/\n",
     "    # https://towardsdatascience.com/hypothesis-testing-in-machine-learning-using-python-a0dc89e169ce   \n",
-    "    print(mean1, std1, t_score)\n",
+    "    print(mean1, std1, t_stat)\n",
     "    return\n",
     "\n",
     "t_test(test_y, test_y, 0.8)"
@@ -660,31 +631,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5737704918032787\n",
-      "0.3770491803278688\n",
-      "0.2786885245901639\n",
-      "0.39344262295081966\n",
-      "0.3442622950819672\n",
-      "0.36065573770491804\n",
-      "0.4098360655737705\n",
-      "0.39344262295081966\n",
-      "0.3442622950819672\n",
-      "0.3770491803278688\n",
-      "0.4262295081967213\n",
-      "0.4098360655737705\n",
-      "0.4262295081967213\n",
-      "0.39344262295081966\n",
-      "0.39344262295081966\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class KNN:\n",
     "  def __init__(self, k):\n",
@@ -720,7 +669,7 @@
     "    self.x = self.scale_features(x)\n",
     "    self.y = y\n",
     "\n",
-    "for i in range(0, 15):\n",
+    "for i in range(1, 15):\n",
     "    k1 = KNN(i)\n",
     "    k1.fit(train_x, train_y)\n",
     "    test_pred = k1.predict(test_x)\n",
@@ -732,24 +681,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5901639344262295\n"
+     ]
+    }
+   ],
    "source": [
+    "class Node:\n",
+    "    def __init__(self, pred):\n",
+    "        self.left_child = None\n",
+    "        self.right_child = None\n",
+    "        self.pred = pred\n",
+    "        self.bound = 0\n",
+    "\n",
+    "\n",
     "class DecisionTree:\n",
     "  def __init__(self, max_depth, threshold):\n",
     "    self.max_depth = max_depth\n",
     "    self.threshold = threshold\n",
     "    \n",
-    "  def predict(self, x):\n",
-    "    \n",
-    "    return self\n",
-    "    \n",
     "  def fit(self, x, y):\n",
+    "    self.tree = self.build_tree(x, y, 0)  \n",
     "    \n",
+    "  def split(self, x, y):\n",
     "    return\n",
-    "\n"
+    "\n",
+    "  def build_tree(self, x, y, depth):\n",
+    "    node = Node(pred = y.mode().at[0, 'target'])\n",
+    "    if depth < self.max_depth:\n",
+    "        bound, index = self.split()\n",
+    "        \n",
+    "        node.left_child = self.build_tree(left_x, left_y, depth + 1)\n",
+    "        node.right_child = self.build_tree(right_x, right_y, depth + 1)\n",
+    "\n",
+    "    return node\n",
+    "    \n",
+    "  def predict(self, test_x):\n",
+    "    test_pred = pd.DataFrame(columns = ['target'], index = test_x.index)\n",
+    "    \n",
+    "    for i in range(0, len(test_x)):\n",
+    "        node = self.tree\n",
+    "        while node.left_child:\n",
+    "            print(test_x.iloc[i])\n",
+    "            if test_x.iloc[i] < node.bound:\n",
+    "                node = node.left_child\n",
+    "            else:\n",
+    "                node = node.right_child\n",
+    "        test_pred.at[test_x.index[i], 'target'] = node.pred\n",
+    "    \n",
+    "    return test_pred\n",
+    "    \n",
+    "d1 = DecisionTree(4, 0.8)\n",
+    "d1.fit(train_x, train_y)\n",
+    "test_pred = d1.predict(test_x)\n",
+    "print(accuracy(test_pred, test_y))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
