Average binding and similarities

--- a/ML_BIO_Project_Phase1_StudentVersion/Phase1_95104866.ipynb
+++ b/ML_BIO_Project_Phase1_StudentVersion/Phase1_95104866.ipynb
@@ -677,42 +677,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AAK1                             47.917319\n",
-      "ABL1(E255K)-phosphorylated       53.579599\n",
-      "ABL1(F317I)-nonphosphorylated    53.579599\n",
-      "ABL1(F317I)-phosphorylated       53.579599\n",
-      "ABL1(F317L)-nonphosphorylated    53.579599\n",
-      "                                   ...    \n",
-      "YES                              52.724104\n",
-      "YSK1                             52.003396\n",
-      "YSK4                             50.891966\n",
-      "ZAK                              51.674952\n",
-      "ZAP70                            51.745916\n",
-      "Length: 442, dtype: float64\n",
-      "                               Binding_Val\n",
-      "Target                                    \n",
-      "AAK1                              0.634102\n",
-      "ABL1(E255K)-phosphorylated        0.926872\n",
-      "ABL1(F317I)-nonphosphorylated     0.625220\n",
-      "ABL1(F317I)-phosphorylated        0.597001\n",
-      "ABL1(F317L)-nonphosphorylated     0.849007\n",
-      "...                                    ...\n",
-      "ZAP70                             0.129433\n",
-      "p38-alpha                         0.251740\n",
-      "p38-beta                          0.203892\n",
-      "p38-delta                         0.106937\n",
-      "p38-gamma                         0.092945\n",
-      "\n",
-      "[442 rows x 1 columns]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -734,244 +701,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>AAK1</th>\n",
-       "      <th>ABL1(E255K)-phosphorylated</th>\n",
-       "      <th>ABL1(F317I)-nonphosphorylated</th>\n",
-       "      <th>ABL1(F317I)-phosphorylated</th>\n",
-       "      <th>ABL1(F317L)-nonphosphorylated</th>\n",
-       "      <th>ABL1(F317L)-phosphorylated</th>\n",
-       "      <th>ABL1(H396P)-nonphosphorylated</th>\n",
-       "      <th>ABL1(H396P)-phosphorylated</th>\n",
-       "      <th>ABL1(M351T)-phosphorylated</th>\n",
-       "      <th>ABL1(Q252H)-nonphosphorylated</th>\n",
-       "      <th>...</th>\n",
-       "      <th>WEE1</th>\n",
-       "      <th>WEE2</th>\n",
-       "      <th>YANK1</th>\n",
-       "      <th>YANK2</th>\n",
-       "      <th>YANK3</th>\n",
-       "      <th>YES</th>\n",
-       "      <th>YSK1</th>\n",
-       "      <th>YSK4</th>\n",
-       "      <th>ZAK</th>\n",
-       "      <th>ZAP70</th>\n",
+       "      <th>avg-sim</th>\n",
+       "      <th>avg-binding</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>AAK1</th>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>...</td>\n",
-       "      <td>44.057971</td>\n",
-       "      <td>53.125000</td>\n",
-       "      <td>46.456693</td>\n",
-       "      <td>43.881857</td>\n",
-       "      <td>47.679325</td>\n",
-       "      <td>46.666667</td>\n",
-       "      <td>52.564103</td>\n",
-       "      <td>46.886447</td>\n",
-       "      <td>47.441860</td>\n",
-       "      <td>50.000000</td>\n",
+       "      <td>47.917319</td>\n",
+       "      <td>0.634102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ABL1(E255K)-phosphorylated</th>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>38.314176</td>\n",
-       "      <td>45.454545</td>\n",
-       "      <td>48.028674</td>\n",
-       "      <td>52.674897</td>\n",
-       "      <td>47.826087</td>\n",
-       "      <td>64.108352</td>\n",
-       "      <td>48.199446</td>\n",
-       "      <td>50.793651</td>\n",
-       "      <td>54.915254</td>\n",
-       "      <td>60.350877</td>\n",
+       "      <td>53.579599</td>\n",
+       "      <td>0.926872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ABL1(F317I)-nonphosphorylated</th>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>38.314176</td>\n",
-       "      <td>45.454545</td>\n",
-       "      <td>48.028674</td>\n",
-       "      <td>52.674897</td>\n",
-       "      <td>47.826087</td>\n",
-       "      <td>64.108352</td>\n",
-       "      <td>48.199446</td>\n",
-       "      <td>50.793651</td>\n",
-       "      <td>54.915254</td>\n",
-       "      <td>60.350877</td>\n",
+       "      <td>53.579599</td>\n",
+       "      <td>0.625220</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ABL1(F317I)-phosphorylated</th>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>38.314176</td>\n",
-       "      <td>45.454545</td>\n",
-       "      <td>48.028674</td>\n",
-       "      <td>52.674897</td>\n",
-       "      <td>47.826087</td>\n",
-       "      <td>64.108352</td>\n",
-       "      <td>48.199446</td>\n",
-       "      <td>50.793651</td>\n",
-       "      <td>54.915254</td>\n",
-       "      <td>60.350877</td>\n",
+       "      <td>53.579599</td>\n",
+       "      <td>0.597001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ABL1(F317L)-nonphosphorylated</th>\n",
-       "      <td>45.481928</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>38.314176</td>\n",
-       "      <td>45.454545</td>\n",
-       "      <td>48.028674</td>\n",
-       "      <td>52.674897</td>\n",
-       "      <td>47.826087</td>\n",
-       "      <td>64.108352</td>\n",
-       "      <td>48.199446</td>\n",
-       "      <td>50.793651</td>\n",
-       "      <td>54.915254</td>\n",
-       "      <td>60.350877</td>\n",
+       "      <td>53.579599</td>\n",
+       "      <td>0.849007</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 442 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                     AAK1  ABL1(E255K)-phosphorylated  \\\n",
-       "AAK1                           100.000000                   45.481928   \n",
-       "ABL1(E255K)-phosphorylated      45.481928                  100.000000   \n",
-       "ABL1(F317I)-nonphosphorylated   45.481928                  100.000000   \n",
-       "ABL1(F317I)-phosphorylated      45.481928                  100.000000   \n",
-       "ABL1(F317L)-nonphosphorylated   45.481928                  100.000000   \n",
-       "\n",
-       "                               ABL1(F317I)-nonphosphorylated  \\\n",
-       "AAK1                                               45.481928   \n",
-       "ABL1(E255K)-phosphorylated                        100.000000   \n",
-       "ABL1(F317I)-nonphosphorylated                     100.000000   \n",
-       "ABL1(F317I)-phosphorylated                        100.000000   \n",
-       "ABL1(F317L)-nonphosphorylated                     100.000000   \n",
-       "\n",
-       "                               ABL1(F317I)-phosphorylated  \\\n",
-       "AAK1                                            45.481928   \n",
-       "ABL1(E255K)-phosphorylated                     100.000000   \n",
-       "ABL1(F317I)-nonphosphorylated                  100.000000   \n",
-       "ABL1(F317I)-phosphorylated                     100.000000   \n",
-       "ABL1(F317L)-nonphosphorylated                  100.000000   \n",
-       "\n",
-       "                               ABL1(F317L)-nonphosphorylated  \\\n",
-       "AAK1                                               45.481928   \n",
-       "ABL1(E255K)-phosphorylated                        100.000000   \n",
-       "ABL1(F317I)-nonphosphorylated                     100.000000   \n",
-       "ABL1(F317I)-phosphorylated                        100.000000   \n",
-       "ABL1(F317L)-nonphosphorylated                     100.000000   \n",
-       "\n",
-       "                               ABL1(F317L)-phosphorylated  \\\n",
-       "AAK1                                            45.481928   \n",
-       "ABL1(E255K)-phosphorylated                     100.000000   \n",
-       "ABL1(F317I)-nonphosphorylated                  100.000000   \n",
-       "ABL1(F317I)-phosphorylated                     100.000000   \n",
-       "ABL1(F317L)-nonphosphorylated                  100.000000   \n",
-       "\n",
-       "                               ABL1(H396P)-nonphosphorylated  \\\n",
-       "AAK1                                               45.481928   \n",
-       "ABL1(E255K)-phosphorylated                        100.000000   \n",
-       "ABL1(F317I)-nonphosphorylated                     100.000000   \n",
-       "ABL1(F317I)-phosphorylated                        100.000000   \n",
-       "ABL1(F317L)-nonphosphorylated                     100.000000   \n",
-       "\n",
-       "                               ABL1(H396P)-phosphorylated  \\\n",
-       "AAK1                                            45.481928   \n",
-       "ABL1(E255K)-phosphorylated                     100.000000   \n",
-       "ABL1(F317I)-nonphosphorylated                  100.000000   \n",
-       "ABL1(F317I)-phosphorylated                     100.000000   \n",
-       "ABL1(F317L)-nonphosphorylated                  100.000000   \n",
-       "\n",
-       "                               ABL1(M351T)-phosphorylated  \\\n",
-       "AAK1                                            45.481928   \n",
-       "ABL1(E255K)-phosphorylated                     100.000000   \n",
-       "ABL1(F317I)-nonphosphorylated                  100.000000   \n",
-       "ABL1(F317I)-phosphorylated                     100.000000   \n",
-       "ABL1(F317L)-nonphosphorylated                  100.000000   \n",
-       "\n",
-       "                               ABL1(Q252H)-nonphosphorylated  ...       WEE1  \\\n",
-       "AAK1                                               45.481928  ...  44.057971   \n",
-       "ABL1(E255K)-phosphorylated                        100.000000  ...  38.314176   \n",
-       "ABL1(F317I)-nonphosphorylated                     100.000000  ...  38.314176   \n",
-       "ABL1(F317I)-phosphorylated                        100.000000  ...  38.314176   \n",
-       "ABL1(F317L)-nonphosphorylated                     100.000000  ...  38.314176   \n",
-       "\n",
-       "                                    WEE2      YANK1      YANK2      YANK3  \\\n",
-       "AAK1                           53.125000  46.456693  43.881857  47.679325   \n",
-       "ABL1(E255K)-phosphorylated     45.454545  48.028674  52.674897  47.826087   \n",
-       "ABL1(F317I)-nonphosphorylated  45.454545  48.028674  52.674897  47.826087   \n",
-       "ABL1(F317I)-phosphorylated     45.454545  48.028674  52.674897  47.826087   \n",
-       "ABL1(F317L)-nonphosphorylated  45.454545  48.028674  52.674897  47.826087   \n",
-       "\n",
-       "                                     YES       YSK1       YSK4        ZAK  \\\n",
-       "AAK1                           46.666667  52.564103  46.886447  47.441860   \n",
-       "ABL1(E255K)-phosphorylated     64.108352  48.199446  50.793651  54.915254   \n",
-       "ABL1(F317I)-nonphosphorylated  64.108352  48.199446  50.793651  54.915254   \n",
-       "ABL1(F317I)-phosphorylated     64.108352  48.199446  50.793651  54.915254   \n",
-       "ABL1(F317L)-nonphosphorylated  64.108352  48.199446  50.793651  54.915254   \n",
-       "\n",
-       "                                   ZAP70  \n",
-       "AAK1                           50.000000  \n",
-       "ABL1(E255K)-phosphorylated     60.350877  \n",
-       "ABL1(F317I)-nonphosphorylated  60.350877  \n",
-       "ABL1(F317I)-phosphorylated     60.350877  \n",
-       "ABL1(F317L)-nonphosphorylated  60.350877  \n",
-       "\n",
-       "[5 rows x 442 columns]"
+       "                                 avg-sim  avg-binding\n",
+       "0                                                    \n",
+       "AAK1                           47.917319     0.634102\n",
+       "ABL1(E255K)-phosphorylated     53.579599     0.926872\n",
+       "ABL1(F317I)-nonphosphorylated  53.579599     0.625220\n",
+       "ABL1(F317I)-phosphorylated     53.579599     0.597001\n",
+       "ABL1(F317L)-nonphosphorylated  53.579599     0.849007"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,15 +764,13 @@
     "# add these two feature as 'avg-sim', 'avg-binding' to target_gene_names DataFrame\n",
     "#################################################################################\n",
     "\n",
-    "print(sim_targets.mean())\n",
-    "print(train_data.groupby('Target').mean())\n",
-    "target_gene_names\n",
+    "target_gene_names['avg-sim'] = sim_targets.mean()\n",
+    "target_gene_names['avg-binding'] = train_data.groupby('Target').mean()\n",
     "\n",
     "#################################################################################\n",
     "#                                   THE END                                     #\n",
     "#################################################################################\n",
-    "target_gene_names.head()\n",
-    "sim_targets.head()"
+    "target_gene_names.head()"
    ]
   },
   {
@@ -1067,6 +844,8 @@
     "# add these two feature as 'avg-sim', 'avg-binding' to drug_pubchemIDs DataFrame\n",
     "#################################################################################\n",
     "\n",
+    "drug_pubchemIDs['avg-sim'] = sim_targets.mean()\n",
+    "drug_pubchemIDs['avg-binding'] = train_data.groupby('Target').mean()\n",
     "\n",
     "#################################################################################\n",
     "#                                   THE END                                     #\n",
