--- a/ensemble_feature_selection/EnsembleMethods_FeatureSelection.ipynb
+++ b/ensemble_feature_selection/EnsembleMethods_FeatureSelection.ipynb
@@ -693,11 +693,7 @@
     "id": "rUodQdBvPrKQ"
    },
    "source": [
-    "In this part you should implement adaptive boosting algorithm. </br>\n",
-    "<picture>\n",
-    "  <img src=\"http://uupload.ir/files/b919_adaboost.png\" alt=\"Adaboost\" width=\"600\" height=\"300\">\n",
-    "</picture>\n",
-    "\n"
+    "In this part you should implement adaptive boosting algorithm. </br>\n"
    ]
   },
   {
@@ -1502,7 +1498,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1516,7 +1512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5rc1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
