--- a/project1_simboost/SimBoost.ipynb
+++ b/project1_simboost/SimBoost.ipynb
@@ -7,8 +7,7 @@
     "id": "BrRE_yJrbBGJ"
    },
    "source": [
-    "# Project Phase 1 \n",
-    "## SimBoost\n",
+    "# Drug Discovery with SimBoost\n",
     "\n",
     "\n",
     "Drug discovery is a time-consuming, laborious, costly and high-risk process. According to a report by the Eastern Research Group (ERG), it usually takes 10-15 years to develop a new drug. However, the success rate of developing a new molecular entity is only 2.01%. \\\n",
@@ -5213,7 +5212,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5227,7 +5226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5rc1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
